refactor: format java code with usage of google-java-format plugin